# OOP_LAB_3

./: CMakeLists.txt  main.cpp  tests.cpp
include/: Figure.h  Pentagon.h  Rhomb.h  Trapecy.h
src/: Figure.cpp  Pentagon.cpp  Rhomb.cpp  Trapecy.cpp
